--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "5.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-map-gl": "3.2.2",
     "react-scripts": "1.1.0"
   },
   "scripts": {
