--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "dotenv": "5.0.0",
+    "emotion": "9.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-emotion": "9.0.0",
     "react-map-gl": "3.2.2",
     "react-scripts": "1.1.0"
   },
